# TalkTurbo

./: .gitignore  .pre-commit-config.yaml  ChatContext.py  Dockerfile  LICENSE  OpenAIModelAssistant.py  README.md  build.ps1  build.sh  makefile  openaitest.py  pre-load.yaml  pyproject.toml  requirements.txt  turbo.py
.github/scripts/: bump_version.py
.github/workflows/: python-package.yml
src/TalkTurbo/: ChatContext.py  CompletionAssistant.py  LoggerGenerator.py  Messages.py  Moderations.py  OpenAIModelAssistant.py  PreLoad.py  TalkTurbo.py  Turbo.py  TurboGuild.py  TurboTier.py  __init__.py  __main__.py  dump.py
src/TalkTurbo/ApiAdapters/: ABCtest.py  AnthropicAdapter.py  ApiAdapter.py  GoogleAdapter.py  GroqAdapter.py  Model.py  ModelDescription.py  OpenAIAdapter.py
src/TalkTurbo/Metering/: Meter.py  TurboInteraction.py
src/TalkTurbo/ModelResponses/: ChatCompletionResponse.py  Choice.py  Message.py  Usage.py
src/TalkTurbo/ModelResponses/Moderations/: ModerationCategories.py  ModerationResponse.py  ModerationResults.py
src/TalkTurbo/bots/turbo/: args.py  turbo.py
tests/: ChatCompletionResponse_test.py  ChatContext_test.py  Choice_test.py  LoggerGenerator_test.py  Message_test.py  Messages_test.py  ModerationResponse_test.py  ModerationResults_test.py  Moderations_test.py  OpenAIModelAssistant_test.py  TurboGuildMap_test.py  Usage_test.py
