[build-system]
requires = [
  "setuptools>=61.0", "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "TalkTurbo"
version = "0.5.0"
authors = [
  { name = "Jim Kroner", email = "contactmeongithubplease@example.com" },
]
description = "A lightweight and context managed LLM chatbot for Discord"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

dependencies = [
  "aiohttp==3.9.0",
  "aiosignal==1.3.1",
  "async-timeout==4.0.2",
  "asyncio==3.4.3"  "attrs==22.2.0",
  "black==23.3.0",
  "build==0.10.0",
  "certifi==2023.7.22",
  "charset-normalizer==3.1.0",
  "click==8.1.3",
  "colorama==0.4.6",
  "discord.py==2.2.2",
  "frozenlist==1.3.3",
  "idna==3.4",
  "joblib==1.2.0",
  "multidict==6.0.4",
  "mypy-extensions==1.0.0",
  "nltk==3.8.1",
  "packaging==23.0",
  "pathspec==0.11.1",
  "platformdirs==3.2.0",
  "pyproject_hooks==1.0.0",
  "python-dotenv==1.0.0",
  "regex==2023.3.23",
  "requests==2.31.0",
  "tiktoken==0.3.3",
  "tomli==2.0.1",
  "tqdm==4.65.0",
  "urllib3==1.26.18",
  "yarl==1.8.2",
  "openai~=1.3",
  "pytest",
  "anthropic~=0.20",
  "google-generativeai",
  "groq",
  "coverage",
  "python-dotenv",
]

[project.urls]
homepage = "https://github.com/jbkroner/TalkTurbo"
issues = "https://github.com/jbkroner/TalkTurbo/issues"

[project.scripts]
turbo = "TalkTurbo.bots.turbo.turbo:main"
