[build-system]
requires = [ "setuptools>=61.0", "wheel",]
build-backend = "setuptools.build_meta"

[project]
name = "TalkTurbo"
version = "0.10.0"
description = "A lightweight and context managed LLM chatbot for Discord"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [ "Programming Language :: Python :: 3", "License :: OSI Approved :: MIT License", "Operating System :: OS Independent",]
dependencies = [ "discord.py~=2.4.0", "python-dotenv~=1.0.0", "requests~=2.31.0", "tiktoken~=0.3", "openai~=1.3", "anthropic~=0.20", "google-generativeai", "groq",]
[[project.authors]]
name = "Jim Kroner"
email = "contactmeongithubplease@example.com"

[project.optional-dependencies]
dev = [ "black~=23.3.0", "build~=0.10.0", "packaging~=23.0", "pathspec==0.11.1", "platformdirs==3.2.0", "pre-commit~=3.8.0", "pyproject_hooks~=1.0.0", "tomli~=2.0.1", "pytest", "coverage", "ruff",]

[project.urls]
homepage = "https://github.com/jbkroner/TalkTurbo"
issues = "https://github.com/jbkroner/TalkTurbo/issues"

[project.scripts]
turbo = "TalkTurbo.bots.turbo.turbo:main"

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100
target-version = [ "py310",]
include = "\\.pyi?$"
extend-exclude = "/(\n  # directories\n  \\.eggs\n  | \\.git\n  | \\.hg\n  | \\.mypy_cache\n  | \\.tox\n  | \\.venv\n  | build\n  | dist\n)/\n"

[tool.ruff.lint]
select = [ "E", "F", "I",]
ignore = [ "E501",]
